name:            hjsmin
version:         0.1.4.1
license:         BSD3
license-file:    LICENSE
author:          Alan Zimmerman <alan.zimm@gmail.com>
maintainer:      Alan Zimmerman <alan.zimm@gmail.com>
synopsis:        Haskell implementation of a javascript minifier
description:
   Reduces size of javascript files by stripping out extraneous whitespace and
   other syntactic elements, without changing the semantics.
category:        Web
stability:       unstable
cabal-version:   >= 1.9.2
build-type:      Simple
homepage:        http://github.com/alanz/hjsmin
bug-reports:     http://github.com/alanz/hjsmin/issues

Extra-source-files:
   TODO.txt
 , README.markdown
 , buildall.sh
 , test/pminified/*.js
 , test/parsingonly/*.js


library
    build-depends:   base                >= 4       && < 5
                   , bytestring          >= 0.9     && < 0.11
                   , blaze-builder       >= 0.2     && < 1
                   , text                >= 0.8     && < 1
                   , containers          >= 0.2     && < 0.6
                   , language-javascript >= 0.5.1   && < 0.6
    exposed-modules: Text.Jasmine
    other-modules:   Text.Jasmine.Pretty
    ghc-options:     -Wall


Test-Suite test-hjsmin
  Type: exitcode-stdio-1.0
  Main-is: runtests.hs
  build-depends: Cabal >= 1.9.2
                 , QuickCheck >= 2 && < 3
                 , HUnit
                 , test-framework
                 , test-framework-hunit
                 , base                >= 4       && < 5
                 , bytestring          >= 0.9     && < 0.11
                 , blaze-builder       >= 0.2     && < 1
                 , text                >= 0.8     && < 1
                 , containers          >= 0.2     && < 0.6
                 , language-javascript >= 0.5.4   && < 0.6

source-repository head
  type:     git
  location: git://github.com/alanz/hjsmin.git
