name:            hjsmin
version:         0.1.4.8
license:         BSD3
license-file:    LICENSE
author:          Alan Zimmerman <alan.zimm@gmail.com>
maintainer:      Erik de Castro Lopo <erikd@mega-nerd.com>
synopsis:        Haskell implementation of a javascript minifier
description:
   Reduces size of javascript files by stripping out extraneous whitespace and
   other syntactic elements, without changing the semantics.
category:        Web
stability:       unstable
cabal-version:   >= 1.9.2
build-type:      Simple
homepage:        http://github.com/erikd/hjsmin
bug-reports:     http://github.com/erikd/hjsmin/issues

Extra-source-files:
   TODO.txt
 , README.markdown
 , buildall.sh
 , test/pminified/*.js
 , test/parsingonly/*.js


library
    build-depends:   base                >= 4
                   , bytestring          >= 0.9
                   , blaze-builder       >= 0.2
                   , text                >= 0.8
                   , containers          >= 0.2
                   , language-javascript >= 0.5.1
    exposed-modules: Text.Jasmine
    other-modules:   Text.Jasmine.Pretty
    ghc-options:     -Wall

executable hjsmin
  main-is:             hjsmin.hs

  ghc-options:         -Wall -threaded
  build-depends:   base                 >= 4       && < 5
                 , bytestring           >= 0.9
                 , blaze-builder        >= 0.2
                 , text                 >= 0.8
                 , containers           >= 0.2
                 , language-javascript  >= 0.5.1
                 , optparse-applicative >= 0.7

Test-Suite test-hjsmin
  Type: exitcode-stdio-1.0
  Main-is: runtests.hs
  build-depends: Cabal >= 1.9.2
                 , QuickCheck >= 2
                 , HUnit
                 , test-framework
                 , test-framework-hunit
                 , base                >= 4       && < 5
                 , bytestring          >= 0.9
                 , blaze-builder       >= 0.2
                 , text                >= 0.8
                 , containers          >= 0.2
                 , language-javascript >= 0.5.4

source-repository head
  type:     git
  location: https://github.com/erikd/hjsmin.git
