name:            hjsmin
version:         0.2.0.2
license:         BSD3
license-file:    LICENSE
author:          Alan Zimmerman <alan.zimm@gmail.com>
maintainer:      Erik de Castro Lopo <erikd@mega-nerd.com>
synopsis:        Haskell implementation of a javascript minifier
description:
   Reduces size of javascript files by stripping out extraneous whitespace and
   other syntactic elements, without changing the semantics.
category:        Web
stability:       unstable
cabal-version:   >= 1.9.2
build-type:      Simple
homepage:        http://github.com/erikd/hjsmin
bug-reports:     http://github.com/erikd/hjsmin/issues

Extra-source-files:
   TODO.txt
 , Readme.md


library
    build-depends:   base                >= 4.5
                   , bytestring          >= 0.9
                   , blaze-builder       >= 0.2
                   , text                >= 0.8
                   , containers          >= 0.2
                   , language-javascript >= 0.6 && < 0.7
    exposed-modules: Text.Jasmine
    other-modules:   Text.Jasmine.Pretty
    ghc-options:     -Wall

executable hjsmin
  main-is:             hjsmin.hs

  ghc-options:         -Wall -threaded
  build-depends:   base                 >= 4       && < 5
                 , bytestring           >= 0.9
                 , blaze-builder        >= 0.2
                 , text                 >= 0.8
                 , containers           >= 0.2
                 , language-javascript  >= 0.6
                 , optparse-applicative >= 0.7

source-repository head
  type:     git
  location: https://github.com/erikd/hjsmin.git
